# tfac-mrsa

./: .gitignore  .jenkinsfile  Factors.p.REMOVED.git-id  GSEA.R  LogReg.p  MRSA_GO_analysis.R  MRSA_pickle.p.REMOVED.git-id  Make_pickles.py  Parafac2tensor.p.REMOVED.git-id  R2X.p  R2X_SVC.p  README.md  Working.ipynb.REMOVED.git-id  citations.tsv  common_decomp.p  genFigures.py  makefile  manuscript.html  manuscript.md  pyproject.toml  references.json  requirements.txt  variables.json
.github/workflows/: autopep8.yml  build.yml  coveragerc  pytest.yml
classifier_comparison/: classifier_comparison.yml  classifier_feat_comparison.py  cohort_comparison.py  hyperparameter_optimization.py
manuscript/: 00.front-matter.md  02.delete-me.md  02.introduction.md  03.results.md  04.methods.md  05.methods.md  metadata.yaml
tfac/: CCLE.py  CP_wopt.m  Data_Mod.py  GSEA_preprocessing.py  GeneAlignment.ipynb  MRSA_GO_analysis.Rmd  MRSA_dataHelpers.py  MRSA_filtering.py  SVR.ipynb  SVR.ipynb.REMOVED.git-id  cmtf.py  create_pickle.py  cutMissingValues.ipynb  dataHelpers.py  dataImport.py  dataOrg.py  dataProcess.py  drugOrg.py  explore_factors.py  fixCutData.ipynb  fixCutDataScript.py  impute.py  missingDataEval.ipynb  predict.py  regression.py  soft_impute.py  tensor.py
tfac/data/: 01_Laura_Heiser__Sean_Gross_A.csv.REMOVED.git-id  01_Laura_Heiser__Sean_Gross_B.csv.REMOVED.git-id  01_Laura_Heiser__Sean_Gross_C.csv.REMOVED.git-id  CellLines_All.xlsx  DrugData.csv.REMOVED.git-id  GeneData_All.xlsx.REMOVED.git-id  bacda09be63893b7c80cf231924021dadf4f9afc_1.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_10.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_10.pkl.REMOVED.git-id  bacda09be63893b7c80cf231924021dadf4f9afc_11.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_12.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_13.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_14.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_15.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_2.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_3.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_4.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_5.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_6.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_7.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_7.pkl.REMOVED.git-id  bacda09be63893b7c80cf231924021dadf4f9afc_8.pkl  bacda09be63893b7c80cf231924021dadf4f9afc_8.pkl.REMOVED.git-id  bacda09be63893b7c80cf231924021dadf4f9afc_9.pkl  cellLines(aligned,precut).csv  fig3_chords_df.csv  fig3_single_df.csv  (+1 more)
(+71 files in other folders)
