[tool.poetry]
name = "tfac"
version = "0.1.0"
description = "Identifying the determinants of MRSA infection outcome with CMTF."
authors = ["Jackson Chin", "Scott Taylor", "Marc Creixell", "Aaron Meyer <a@asmlab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21"
scipy = "^1.7"
matplotlib = "^3.5"
seaborn = "^0.11"
tensorpack = {git = "https://github.com/meyer-lab/tensorpack.git", rev = "v0.0.5"}
scikit-learn = "^1.0"
svgutils = "^0.3"
pandas = "^1.3"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "tfac.figures.common:genFigure"
