[tool.poetry]
name = "tfac"
version = "0.1.0"
description = "Identifying the determinants of MRSA infection outcome with CMTF."
authors = ["Jackson Chin", "Scott Taylor", "Marc Creixell", "Aaron Meyer <a@asmlab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24"
scipy = "^1.7"
matplotlib = "^3.7"
seaborn = "^0.12"
tensorpack = {git = "https://github.com/meyer-lab/tensorpack.git"}
scikit-learn = "^1.2"
svgutils = "^0.3"
pandas = "^1.3"
statsmodels = "^0.14.2"
datashader = "^0.16.0"
colorcet = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "tfac.figures.common:genFigure"
